added more partials (head) and routing files and configured bootstrap custom colors with SASS, added recommended extensions and split the footer css into its own file

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --env-file=.env index.js",
+    "dev": "console-ninja npx nodemon --env-file=.env index.js",
     "start": "node --env-file=.env index.js"
   },
   "keywords": [],
