--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "mongodb": "^6.6.2",
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
