--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "console-ninja npx nodemon --env-file=.env index.js",
+    "dev": "console-ninja nodemon --env-file=.env index.js",
     "start": "node --env-file=.env index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongodb": "^6.6.2",
