--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "validator": "^13.12.0"
