--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "console-ninja nodemon --env-file=.env index.js",
-    "start": "node --env-file=.env index.js",
-    "build": "node --env-file=.env index.js"
+    "dev": "console-ninja nodemon index.js",
+    "start": "node index.js",
+    "build": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.11.3",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
