--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.7.0",
+    "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -24,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
+    "serverless-http": "^3.2.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
