--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "console-ninja nodemon index.js",
+    "dev": "console-ninja nodemon api/index.js",
     "start": "node index.js",
     "build": "node index.js"
   },
