--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "console-ninja nodemon api/index.js",
-    "start": "node index.js",
-    "build": "node index.js"
+    "start": "node api/index.js",
+    "build": "node api/index.js"
   },
   "keywords": [],
   "author": "",
