--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "egyptexplorehub-v3",
   "version": "1.0.0",
   "description": "MIU WEB DEV project",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
     "dev": "console-ninja nodemon api/index.js",
-    "start": "node api/index.js",
-    "build" : "node api/index.js"
-   
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.11.2",
     "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
