--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@google-cloud/storage": "^7.11.2",
     "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "validator": "^13.12.0"
