--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
+    "swiper": "^11.1.4",
     "validator": "^13.12.0"
   },
   "devDependencies": {
