--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.14",
     "swiper": "^11.1.4",
     "validator": "^13.12.0"
   },
